some additions for full html skeleton for step1

--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
 <body>
     <!-- Initial Page to login -->
     <div id="login-page">
-
+        <input type="email" name="user-email">
+        <input type="password" name="user-password">
+        <button id="login-button">Login</button>
+        <button id="signup-button">Sign Up</button>
+    </div>
+    <!-- Page to Sign Up -->
+    <div id="signup-page">
+        <input type="email" name="user-create-email" id="">
+        <input type="password" name="user-create-password" id="">
+        <input type="password" name="user-create-password-confirm" id="">
+        <button id="signup-submit"></button>
     </div>
     <!-- main application inside which there is a navbar with action options, the map, and the location widgets -->
     <div id='main-app'>
