--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
         <input type="email" name="user-create-email" id="">
         <input type="password" name="user-create-password" id="">
         <input type="password" name="user-create-password-confirm" id="">
-        <button id="signup-submit"></button>
+        <button id="signup-submit">Submit</button>
     </div>
     <!-- main application inside which there is a navbar with action options, the map, and the location widgets -->
     <div id='main-app'>
         <header id="navbar"></header>
+        <!-- Header could give a link to a menu to open settings, delete locations, logout etc -> Step2 -->
         <section id="map"></section>
         <section id="locations"></section>
     </div>
