--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>mySpots</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="./assets/js/main.js"></script>
 </head>
 <body>
     <!-- Initial Page to login -->
@@ -39,5 +38,9 @@
     <div id="location-view-page">
 
     </div>
+
+    <script src="./assets/js/jquery-3.3.1.js"></script>
+    <script src="./assets/js/main.js"></script>
+
 </body>
 </html>
