--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     };
     firebase.initializeApp(config);
     </script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlJyxmuoUkTYqiOo5Kqf68m1oESPjssTk&callback=initMap"
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlJyxmuoUkTYqiOo5Kqf68m1oESPjssTk&libraries=places&callback=initMap"
     type="text/javascript"></script>
     <script src="./assets/js/jquery-3.3.1.js"></script>
     <script src="./assets/js/main.js"></script>
