--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <div id='main-app' class="container">
         <header id="navbar" class="row">
             <div id="menu" class="col-2">
+                <!-- Menu toggle is here, to display the different elements -->
                 <h3 id="menu-toggle">Menu</h3>
                 <div id="menu-list">
                     <ul>
@@ -44,10 +45,8 @@
                     </ul>
                 </div>
             </div>
-            
             <div id="create-spot-button" class="col-2">Create spot</div>
         </header>
-        <!-- Header could give a link to a menu to open settings, delete spots, logout etc -> Step2 -->
         <section id="map" class="row">Map</section>
         <section id="spots" class="row"></section>
     </div>
@@ -64,6 +63,17 @@
         <ul id="spots-deletion-list">
         </ul>
         <button id="spot-deletion-confirm">Confirm deletion</button>
+    </div>
+    <!-- Preferences Page -->
+    <div id="preferences-page">
+        <button id="preferences-back">Back to Main</button>
+        <select id="transport-mode-select"> 
+            <option value="DRIVING">Driving</option> 
+            <option value="WALKING">Walking</option>
+            <option value="BICYCLING">Biking</option>
+            <option value="TRANSIT">Public Transport</option>
+        </select>
+        <button id="preferences-confirm">Confirm deletion</button>
     </div>
     <!-- Look up into one spot, information to show to be determined -->
     <div id="spot-view-page">
