added the list of tasks to do to finish preferences

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <option value="BICYCLING">Biking</option>
             <option value="TRANSIT">Public Transport</option>
         </select>
-        <button id="preferences-confirm">Confirm deletion</button>
+        <button id="preferences-confirm">Confirm Preferences</button>
     </div>
     <!-- Look up into one spot, information to show to be determined -->
     <div id="spot-view-page">
