--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
     <title>mySpots</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="./assets/css/main.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
     <link href="https://fonts.googleapis.com/css?family=Istok+Web" rel="stylesheet">
 </head>
 <body>
     <!-- Initial Page to login -->
-    <div class="container">
+    <div class="login-container">
     <div class="login-button" id="login-page">
-        <p class="login-text"> Login to MySpots or Create a Free Account!
-    </p>
-        <input class="email-style" type="email" name="user-email">
-        <input class="password-style" type="password" name="user-password">
+        <p class="login-text"> Login to MySpots or sign up now to make your free account!
+    </p><br>
+        <input class="email-style" placeholder="email" type="email" name="user-email">
+        <input class="password-style" placeholder="password" type="password" name="user-password">
         <br>
         <button class="login-button-style" id="login-button">Login</button>
         <button class="signup-button-style" id="signup-button">Sign Up</button>
@@ -23,22 +24,48 @@
 </div>
     
     <!-- Page to Sign Up -->
-    <div id="signup-page">
-        <input type="email" id="user-create-email">
-        <input type="password" id="user-create-password">
-        <input type="password" id="user-create-password-confirm">
-        <button id="signup-submit">Submit</button>
+    <div class="signup-container">
+    <div class="signup-button" id="signup-page">
+            <p class="signup-text">Sign in to your MySpots</p>
+        <input class="signup-email-style" type="email" placeholder="email" id="user-create-email">
+        <input class="signup-password-style" type="password" placeholder="password" id="user-create-password">
+        <input class="signup-passwordconfirm-style" type="password" placeholder="confirm password" id="user-create-password-confirm">
+        <button class="signup-page-button" id="signup-submit">Submit</button>
     </div>
+</div>
     <!-- main application inside which there is a navbar with action options, the map, and the spot widgets -->
-    <div id='main-app'>
-        <header id="navbar">
-            <div id="menu-button">Menu</div>
-            <div id="create-spot-button">Create spot</div>
-        </header>
+    <div class="mainpage" id='main-app'>
+            <div class="mainpagetitle">MySpots</div>
+            <div class="mainpagesub">Keep track of your favorite spots and log your routes.</div>
+            <br><br>
+            <div class="googlemapslayouthere">Google Maps goes here</div>
+            <div class="style-spot-button" id="create-spot-button">Create a new spot</div>     
+            <div class="favorite-spots">Home</div>
+            <div class="favorite-spots-two">School</div>
+            <div class="favorite-spots">Gym</div>
+            <div class="favorite-spots-two">Store</div>
+            <div id="mySidenav" class="sidenav">
+                    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                    <a href="app_view.setState(STATE.MAIN_CREATE_SPOT)">Add a new spot</a>
+                    <a href="#">View favorited spots</a>
+                    <a href="#">Remove a spot</a>
+                    <a href="#">Create a new route</a>
+                    <a href="#">View Map</a>
+                    <a href="#">Settings</a>
+                    <a href="#"Logout</a>
+                  </div>
+                  <span class="opennav">&#9776; Menu</span>
+         
+                  <header id="navbar">
+                  <div id="menu-button">Menu</div>
+   
         <!-- Header could give a link to a menu to open settings, delete spots, logout etc -> Step2 -->
-        <section id="map">Map</section>
-        <section id="spots"></section>
+                  <section id="map">Map</section>
+                  <section id="spots"></section> 
     </div>
+</header>
+
+
     <!-- spot Creation Page -->
     <div id="spot-creation-page">
         <input type="text" id="data-spot-label">
