--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
     <!-- Initial Page to login -->
-    <div class="login-container">
-    <div class="login-button" id="login-page">
+    <div class="login-container" id="login-page">
+    <div class="login-button" >
         <p class="login-text"> Login to MySpots or sign up now to make your free account!
     </p><br>
         <input class="email-style" placeholder="email" type="email" id="user-email">
