--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>mySpots</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="./assets/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="./assets/css/main.css">
-    <link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/mainmax.css">
     <link href="https://fonts.googleapis.com/css?family=Istok+Web" rel="stylesheet">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
 </head>
 <body>
     <!-- Initial Page to login -->
@@ -42,7 +42,7 @@
         <header id="navbar" class="row">
             <div id="menu" class="col-2">
                 <!-- Menu toggle is here, to display the different elements -->
-                <h3 id="menu-toggle">Menu</h3>
+                <div id="menu-toggle"><i class="fas fa-bars"></i></div>
                 <div id="menu-list">
                     <ul>
                         <li><button id="delete-spots-open">Delete Spots</button></li>
@@ -51,12 +51,13 @@
                     </ul>
                 </div>
             </div>
-            <div id="create-spot-button" class="col-2">Create spot</div>
+            <div class="col-8" id="current-tranport-mode"></div>
+            <div id="create-spot-button" class="col-2"><i class="fas fa-plus"></i></div>
         </header>
-        <section id="map" class="row">Map</section>
+        <section id="map" class="row"></section>
         <section id="spots" class="row"></section>
     </div>
-</header>
+
 
 
     <!-- spot Creation Page -->
