--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div id="create-spot-button" class="col-2"><i class="fas fa-plus"></i></div>
         </header>
         <section id="map" class="row"></section>
-        <section id="spots" class="row"></section>
+        <section id="spots" class="row spots"></section>
     </div>
 
 
