--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                                           <div class="row">
                                                 <div class="col-sm">
                                                         <div id="create-spot-button" data-toggle="modal" data-target="#exampleModal">Create spot</div>
-                                                        <ul id="spots"></ul>
+                                                        <section id="spots"></section>
                                                 </div>
                     <div class="col-lg">
 
