fixed the navbar after merge

--- a/index.html
+++ b/index.html
@@ -169,5 +169,6 @@
     <script src="./assets/js/main.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlJyxmuoUkTYqiOo5Kqf68m1oESPjssTk&libraries=places&callback=initMap"
     type="text/javascript"></script>
+    <script src="./assets/js/nav.js"></script>
 </body>
 </html>
