main page style

--- a/index.html
+++ b/index.html
@@ -51,15 +51,18 @@
                                       <nav class="navbar navbar-light navbar-static bg-faded" role="navigation">
                                             <button class="navbar-toggler pull-xs-right" type="button" id="create-spot-button" data-toggle="modal" data-target="#exampleModal">
                                                     <i class="fas fa-plus"></i>
+                                                    <div class="create-spot">Create a new spot</div>
                                                   </button>
-                                            <a class="navbar-brand" href="#">MySp<i class="fas fa-map-marker-alt"></i>ts</a>
+                                            <a class="navbar-brand" id="title" href="#">MySp<i class="fas fa-map-marker-alt"></i>ts</a>
                                             <!--We took out menu-toggle and menu-list id's-->
                                             <div class="nav navbar-nav">
                             
                                               <!-- insert more nav-items if you so choose -->
                                               <button class="navbar-toggler pull-xs-right" id="navbarSideButton" type="button">
                                                 &#9776;
+                                                <div class="menu-style">Menu</div>
                                               </button>
+
                                             </div>
                                             <ul class="navbar-side" id="navbarSide">
 
