--- a/index.html
+++ b/index.html
@@ -135,11 +135,13 @@
     </div>
     <!-- Spots Deletion Page -->
     <div id="spots-deletion-page">
+            <div class="container-fluid">
         <button id="spots-deletion-back">Back to Main</button>
-        <h3>Select Spots to delete</h3>
+        <h3 id="delete-page-title">Select Spots to delete</h3>
         <ul id="spots-deletion-list">
         </ul>
         <button id="spot-deletion-confirm">Confirm deletion</button>
+    </div>
     </div>
     <!-- Preferences Page -->
     <div id="preferences-page">
