--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="../mySpots/assets/css/reset.css">
 
     <link rel="stylesheet" type="text/css" href="../mySpots/assets/css/main.css">
-    <link rel="stylesheet" type="text/css" href="../mySpots/assets/css/nav.scss">
+    <link rel="stylesheet" type="text/css" href="../mySpots/assets/css/nav.css">
     <link rel="stylesheet" type="text/css" href="../mySpots/assets/css/bootstrap.min.css">
 
     <link href="https://fonts.googleapis.com/css?family=Istok+Web" rel="stylesheet">
