fixed the create spot, going full bootstrap

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <input type="text" id="data-spot-address" placeholder="Enter Address">
                     </div>
                     <div class="form-group">
-                    <button type="button" class="btn btn-primary" id="data-spot-create">Submit</button>
+                    <button type="button" class="btn btn-primary" data-dismiss='modal' id="data-spot-create">Submit</button>
                     </div>
             </div>
             
