--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
       <div class="container-style" id="signup-page">
     <div class="display-box">
-        <p class="login-signup-text"> Sign in to your MySpots</p>
+        <p class="login-signup-text"> Create a new MySpots accounts</p>
         <input class="input-style" type="text" placeholder="name" id='user-create-display'>
         <input class="input-style" type="email" placeholder="email" id="user-create-email">
         <br>
@@ -135,13 +135,12 @@
     </div>
     <!-- Spots Deletion Page -->
     <div id="spots-deletion-page">
-            <div class="container-fluid">
-        <button id="spots-deletion-back">Back to Main</button>
-        <h3 id="delete-page-title">Select Spots to delete</h3>
-        <ul id="spots-deletion-list">
-        </ul>
-        <button id="spot-deletion-confirm">Confirm deletion</button>
-    </div>
+        <div class="container-fluid this-is-my-background">
+            <h3 id="delete-page-title">Select Spots to delete</h3>
+            <ul id="spots-deletion-list"></ul>
+            <button id="spots-deletion-back">Back to Main</button>
+            <button id="spot-deletion-confirm">Confirm deletion</button>
+        </div>
     </div>
     <!-- Preferences Page -->
     <div id="preferences-page">
