--- a/index.html
+++ b/index.html
@@ -144,15 +144,29 @@
     </div>
     <!-- Preferences Page -->
     <div id="preferences-page">
-        <button id="preferences-back">Back to Main</button>
-        <select id="transport-mode-select"> 
-            <option value="DRIVING">Driving</option> 
-            <option value="WALKING">Walking</option>
-            <option value="BICYCLING">Biking</option>
-            <option value="TRANSIT">Public Transport</option>
-        </select>
-        <button id="preferences-confirm">Confirm Preferences</button>
+        <div class="container-fluid spotsBgColor">
+                <div class="row">
+                        <div class="col align-self-center">
+                                <h3>Preferences</h3>
+                            </div>
+                </div>
+    
+                <div class="row">
+                        <div class="col-sm align-self-center">
+    <select id="transport-mode-select"> 
+        <option value="DRIVING">Driving</option> 
+        <option value="WALKING">Walking</option>
+        <option value="BICYCLING">Biking</option>
+        <option value="TRANSIT">Public Transport</option>
+    </select>
     </div>
+    </div>
+    <div class="row align-self-center">
+    <button  class="btn spotsButton" id="preferences-back">Back to Main</button>
+    <button class="btn spotsButton" id="preferences-confirm">Confirm Preferences</button>
+    </div>
+    </div>
+</div>
     <!-- Look up into one spot, information to show to be determined -->
     <div id="spot-view-page">
 
