last minute updates

--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
 
 <div id="spots-deletion-page">
   <div class="delete-page-display-box">
-    <h3 id="delete-page-title">Select Spots to delete</h3>
+    <h3 id="delete-page-title">Select Spots to Delete</h3>
     <ul id="spots-deletion-list">
     </ul>
-    <button class="btn" id="spots-deletion-back">Back to Main</button>
-    <button class="btn" id="spot-deletion-confirm">Confirm deletion</button>
+    <button class="btn spotsButton" id="spots-deletion-back">Back to Main</button>
+    <button class="btn spotsButton" id="spot-deletion-confirm">Confirm Deletion</button>
   </div>
 </div>
 
@@ -140,12 +140,9 @@
           </select>
         </div>
       </div>
-      <div class="row">
-        <div class="col align-self-center spotsCol">
-          <button class="btn spotsButton" id="preferences-back">Back to Main</button>
-          <button class="btn spotsButton" id="preferences-confirm">Confirm Preferences</button>
-        </div>
-      </div>
+      <button class="btn spotsButton" id="preferences-back">Back to Main</button>
+      <button class="btn spotsButton" id="preferences-confirm">Confirm Preferences</button>
+     
     </div>
   </div>
 </div>
